k8s/canary/deployment-canary.yml
# deployment-canary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: popquiz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: popquiz-backend-deployment-canary
  namespace: popquiz
  labels:
    app: popquiz-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: popquiz-backend
  template:
    metadata:
      labels:
        app: popquiz-backend
    spec:
      containers:
        - name: popquiz-backend
          image: abhaytopno/popquiz-backend:v4
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: '100m'
              memory: '128Mi'
            limits:
              cpu: '500m'
              memory: '512Mi'
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: popquiz-frontend-deployment-canary
  namespace: popquiz
  labels:
    app: popquiz-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: popquiz-frontend
  template:
    metadata:
      labels:
        app: popquiz-frontend
    spec:
      containers:
        - name: popquiz-frontend
          image: abhaytopno/popquiz-frontend:v3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: '100m'
              memory: '128Mi'
            limits:
              cpu: '500m'
              memory: '512Mi'
