k8s/canary/service.yml
# service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: popquiz
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379

---
# --- Backend Services ---
apiVersion: v1
kind: Service
metadata:
  name: popquiz-backend-service-stable
  namespace: popquiz
spec:
  selector:
    app: popquiz-backend
    version: stable
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: popquiz-backend-service-canary
  namespace: popquiz
spec:
  selector:
    app: popquiz-backend-canary
    version: canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP

---
# --- Frontend Services ---
apiVersion: v1
kind: Service
metadata:
  name: popquiz-frontend-service-stable
  namespace: popquiz
spec:
  selector:
    app: popquiz-frontend
    version: stable
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: popquiz-frontend-service-canary
  namespace: popquiz
spec:
  selector:
    app: popquiz-frontend-canary
    version: canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
